--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,10 @@
 	"replace": {
 		"studiomitte/sendinblue": "self.version",
 		"typo3-ter/sendinblue": "self.version"
+	},
+	 "extra": {
+		"typo3/cms": {
+			"extension-key": "sendinblue"
+		}
 	}
 }
