--- a/Resources/Private/Example/sendinblue-example.form.yaml
+++ b/Resources/Private/Example/sendinblue-example.form.yaml
@@ -14,6 +14,10 @@ finishers:
       email: '{text-2}'
       tracking: trackingvalue
       additionalListIds: '{multicheckbox-1}'
+
+      # override global settings
+      # doiTemplateId: '14'
+      # defaultListIds: '12,34'
     identifier: Sendinblue
   -
     options:
