[TASK] make use of default enabling feature

--- a/Resources/Private/Example/sendinblue-example.form.yaml
+++ b/Resources/Private/Example/sendinblue-example.form.yaml
@@ -7,8 +7,9 @@ label: sendinblue
 prototypeName: standard
 finishers:
   -
-    options:
+    renderingOptions:
       enabled: '{checkbox-1}'
+    options:
       firstName: '{text-1}'
       lastName: '{text-3}'
       email: '{text-2}'
@@ -40,22 +41,11 @@ renderables:
         label: Vorname
         properties:
           elementDescription: ''
-          fluidAdditionalAttributes:
-            required: required
-        validators:
-          -
-            identifier: NotEmpty
       -
         defaultValue: ''
         type: Text
         identifier: text-3
         label: Nachname
-        properties:
-          fluidAdditionalAttributes:
-            required: required
-        validators:
-          -
-            identifier: NotEmpty
       -
         defaultValue: ''
         type: Text
