--- a/Resources/Private/Example/sendinblue-example.form.yaml
+++ b/Resources/Private/Example/sendinblue-example.form.yaml
@@ -15,6 +15,8 @@ finishers:
       email: '{text-2}'
       tracking: trackingvalue
       additionalListIds: '{multicheckbox-1}'
+      additionalAttributes:
+        salutation: '{salutation}'
 
       # override global settings
       # doiTemplateId: '14'
@@ -34,6 +36,14 @@ renderables:
     identifier: page-1
     label: Step
     renderables:
+      -
+        properties:
+          options:
+            '1': 'Mr.'
+            '2': 'Mrs.'
+        type: SingleSelect
+        identifier: salutation
+        label: Salutation
       -
         defaultValue: ''
         type: Text
