[BUGFIX] bring back reports submodule

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -9,3 +9,7 @@ services:
       - name: 'console.command'
         command: 'sendinblue:test'
         schedulable: false
+
+  StudioMitte\Sendinblue\Report\IntegrationReport:
+    tags:
+      - name: reports.report
