--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	"require": {
 		"typo3/cms-core": "^11.5||^12.4",
 		"typo3/cms-form": "^11.5||^12.4",
-		"sendinblue/api-v3-sdk": "^8"
+		"getbrevo/brevo-php": "^1"
 	},
 	"require-dev": {
 		"typo3/testing-framework": "^6.4",
